syntax = "proto3";

package etu;

option go_package = "github.com/icco/etu-backend/proto";

// Timestamp message
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// User message
message User {
  string id = 1;
  string email = 2;
  optional string name = 3;
  optional string image = 4;
  string subscription_status = 5;
  optional Timestamp subscription_end = 6;
  Timestamp created_at = 7;
  optional string stripe_customer_id = 8;
}

// API Key message
message ApiKey {
  string id = 1;
  string name = 2;
  string key_prefix = 3;
  Timestamp created_at = 4;
  optional Timestamp last_used = 5;
}

// Note message
message Note {
  string id = 1;
  string content = 2;
  repeated string tags = 3;
  Timestamp created_at = 4;
  Timestamp updated_at = 5;
}

// Tag message
message Tag {
  string id = 1;
  string name = 2;
  int32 count = 3;
  Timestamp created_at = 4;
}

// Request/Response messages for Notes

message ListNotesRequest {
  string user_id = 1;      // Required for auth context
  string search = 2;
  repeated string tags = 3;
  string start_date = 4;   // ISO 8601 format
  string end_date = 5;     // ISO 8601 format
  int32 limit = 6;
  int32 offset = 7;
}

message ListNotesResponse {
  repeated Note notes = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message CreateNoteRequest {
  string user_id = 1;      // Required for auth context
  string content = 2;
  repeated string tags = 3;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  string user_id = 1;      // Required for auth context
  string id = 2;
}

message GetNoteResponse {
  Note note = 1;
}

message UpdateNoteRequest {
  string user_id = 1;      // Required for auth context
  string id = 2;
  optional string content = 3;
  repeated string tags = 4;
  bool update_tags = 5;    // Flag to indicate if tags should be updated
}

message UpdateNoteResponse {
  Note note = 1;
}

message DeleteNoteRequest {
  string user_id = 1;      // Required for auth context
  string id = 2;
}

message DeleteNoteResponse {
  bool success = 1;
}

// Request/Response messages for Tags

message ListTagsRequest {
  string user_id = 1;      // Required for auth context
}

message ListTagsResponse {
  repeated Tag tags = 1;
}

// Service definitions

service NotesService {
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse);
}

service TagsService {
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
}

// Request/Response messages for Auth

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  User user = 1;
}

message AuthenticateRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateResponse {
  bool success = 1;
  optional User user = 2;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByStripeCustomerIdRequest {
  string stripe_customer_id = 1;
}

message GetUserByStripeCustomerIdResponse {
  optional User user = 1;
}

message UpdateUserSubscriptionRequest {
  string user_id = 1;
  string subscription_status = 2;
  optional string stripe_customer_id = 3;
  optional Timestamp subscription_end = 4;
}

message UpdateUserSubscriptionResponse {
  User user = 1;
}

// Request/Response messages for API Keys

message CreateApiKeyRequest {
  string user_id = 1;
  string name = 2;
}

message CreateApiKeyResponse {
  ApiKey api_key = 1;
  string raw_key = 2;  // Only returned on creation
}

message ListApiKeysRequest {
  string user_id = 1;
}

message ListApiKeysResponse {
  repeated ApiKey api_keys = 1;
}

message DeleteApiKeyRequest {
  string user_id = 1;
  string key_id = 2;
}

message DeleteApiKeyResponse {
  bool success = 1;
}

message VerifyApiKeyRequest {
  string raw_key = 1;
}

message VerifyApiKeyResponse {
  bool valid = 1;
  optional string user_id = 2;
}

// Service definitions for Auth

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByStripeCustomerId(GetUserByStripeCustomerIdRequest) returns (GetUserByStripeCustomerIdResponse);
  rpc UpdateUserSubscription(UpdateUserSubscriptionRequest) returns (UpdateUserSubscriptionResponse);
}

service ApiKeysService {
  rpc CreateApiKey(CreateApiKeyRequest) returns (CreateApiKeyResponse);
  rpc ListApiKeys(ListApiKeysRequest) returns (ListApiKeysResponse);
  rpc DeleteApiKey(DeleteApiKeyRequest) returns (DeleteApiKeyResponse);
  rpc VerifyApiKey(VerifyApiKeyRequest) returns (VerifyApiKeyResponse);
}
